--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1"
   }
